--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.4",
+    "antd": "^5.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-swipeable-views-react-18-fix": "^0.14.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
